# json-api

./: .gitignore  Cargo.toml  sample.db
migrations/2020-01-27-131524_create_users/: up.sql
src/: lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/controllers/: mod.rs  top.rs  users.rs
src/models/: mod.rs  user.rs  util.rs
