[package]
name = "json-api"
version = "0.1.0"
authors = ["MATSUMOTO, Katsuyoshi <github@katsyoshi.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
rocket_contrib = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
diesel = { version = "*", features = ["sqlite"] }
