[package]
name = "json-api"
version = "0.1.0"
authors = ["MATSUMOTO, Katsuyoshi <github@katsyoshi.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-rt = "*"
diesel = { version = "*", features = ["sqlite"] }
dotenv = "*"
qstring = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
